--- a/apps/screenkeeper/index.html
+++ b/apps/screenkeeper/index.html
@@ -1,5 +1,9 @@
 <html>
 	<meta charset="utf-8" />
+	<head>
+		<script defer src="/dist/bundle.js"></script>
+	</head>
 	<body>
+		<div id="screenlocker"></div>
 	</body>
 </html>
