--- a/apps/screenkeeper/index.html
+++ b/apps/screenkeeper/index.html
@@ -1,7 +1,7 @@
 <html>
 	<meta charset="utf-8" />
 	<head>
-		<script defer src="/dist/bundle.js"></script>
+		<script defer src="/static/bundle.js"></script>
 	</head>
 	<body>
 		<div id="screenlocker"></div>
